# fourk

./: README.md  com.github.fourkgamedevs.fourk.yml  meson.build
data/: Tile.css  fourk.desktop  fourk.metainfo.xml  gresource.xml  gschema.xml  meson.build
src/: Application.vala  MainWindow.vala
src/Controllers/: Game.vala
src/Models/: Board.vala  Game.vala
src/Views/: GameView.vala
src/Widgets/: BoardGrid.vala  GameOverDialog.vala  ScoreBox.vala  Tile.vala  VictoryDialog.vala
